[package]
name = "hash_table"
version = "0.1.0"
description = "Learning Hash Table by building it in Rust."
authors = ["Nrishinghananda Roy <roynrishingha@gmail.com>"]
categories = ["data-structures"]
repository = "https://github.com/roynrishingha/hash_table"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
